00-basic-examples/01-ip-forwarding/vnet-nva.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "azureRegion1": {
      "type": "string",
      "defaultValue": "eastus",
      "metadata": {
        "description": "azure region where is deployed the first hub vnet"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "admin username"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "admin password"
      }
    }
  },
  "variables": {
    "windows": {
      "imagePublisher": "MicrosoftWindowsServer",
      "imageOffer": "WindowsServer",
      "OSVersion": "2016-Datacenter"
    },
    "linux": {
      "imagePublisher": "openlogic",
      "imageOffer": "CentOS",
      "OSVersion": "7.5"
    },
    "vNet": {
      "location": "[parameters('azureRegion1')]",
      "name": "vNet",
      "addressSpace1Prefix": "10.0.1.0/24",
      "addressSpace2Prefix": "10.0.2.0/24",
      "addressSpace3Prefix": "10.0.3.0/24",
      "subnet1Name": "subnet1",
      "subnet1Prefix": "10.0.1.0/24",
      "subnet2Name": "subnet2",
      "subnet2Prefix": "10.0.2.0/24",
      "subnet3Name": "subnet3",
      "subnet3Prefix": "10.0.3.0/24"
    },
    "nsg": {
      "name": "nsg",
      "location": "[variables('vNet').location]"
    },
    "nva-ip": "10.0.1.10",
    "RT-subnet2": {
      "name": "RT-vNetHub2",
      "location": "[variables('VNet').location]",
      "nameRTEntry1": "route-to-subnet3",
      "destinationAddressPrefix1": "[variables('VNet').addressSpace3Prefix]",
      "nextHopType1": "VirtualAppliance",
      "nextHopIpAddress1": "[variables('nva-ip')]"
    },
    "RT-subnet3": {
      "name": "RT-vNetSpoke1",
      "location": "[variables('vNet').location]",
      "nameRTEntry1": "route-to-subnet2",
      "destinationAddressPrefix1": "[variables('VNet').addressSpace2Prefix]",
      "nextHopType1": "VirtualAppliance",
      "nextHopIpAddress1": "[variables('nva-ip')]"
    },
    "adminUsername": "[parameters('adminUsername')]",
    "adminPassword": "[parameters('adminPassword')]",
    "vmsize": {
      "linux": "Standard_B1s",
      "windows": "Standard_D1_v2"
    },
    "nva": {
      "vmName": "nva",
      "vmSize": "[variables('vmsize').windows]",
      "imagePublisher": "MicrosoftWindowsServer",
      "imageOffer": "WindowsServer",
      "OSVersion": "2016-Datacenter"
    },
    "vm2": {
      "vmName": "vm2",
      "vmSize": "[variables('vmsize').linux]",
      "imagePublisher": "openlogic",
      "imageOffer": "CentOS",
      "OSVersion": "7.5"
    },
    "vm3": {
      "vmName": "vm3",
      "vmSize": "[variables('vmsize').linux]",
      "imagePublisher": "openlogic",
      "imageOffer": "CentOS",
      "OSVersion": "7.5"
    },
    "vmarray": [
      {
        "location": "[variables('vNet').location]",
        "vmName": "[variables('nva').vmName]",
        "vmSize": "[variables('nva').vmSize]",
        "imagePublisher": "[variables('nva').imagePublisher]",
        "imageOffer": "[variables('nva').imageOffer]",
        "OSVersion": "[variables('nva').OSVersion]",
        "VNetName": "[variables('vNet').name]",
        "SubnetName": "[variables('vNet').subnet1Name]",
        "privateIP": "10.0.1.10",
        "ipforwarding": true
      },
      {
        "location": "[variables('vNet').location]",
        "vmName": "[variables('vm2').vmName]",
        "vmSize": "[variables('vm2').vmSize]",
        "imagePublisher": "[variables('vm2').imagePublisher]",
        "imageOffer": "[variables('vm2').imageOffer]",
        "OSVersion": "[variables('vm2').OSVersion]",
        "VNetName": "[variables('vNet').name]",
        "SubnetName": "[variables('vNet').subnet2Name]",
        "privateIP": "10.0.2.10",
        "ipforwarding": false
      },
      {
        "location": "[variables('vNet').location]",
        "vmName": "[variables('vm3').vmName]",
        "vmSize": "[variables('vm3').vmSize]",
        "imagePublisher": "[variables('vm3').imagePublisher]",
        "imageOffer": "[variables('vm3').imageOffer]",
        "OSVersion": "[variables('vm3').OSVersion]",
        "VNetName": "[variables('vNet').name]",
        "SubnetName": "[variables('vNet').subnet3Name]",
        "privateIP": "10.0.3.10",
        "ipforwarding": false
      }
    ],
    "vmCount": "[length(variables('vmArray'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsg').name]",
      "apiVersion": "2018-06-01",
      "location": "[variables('nsg').location]",
      "comments": "Create the Network Security Group",
      "properties": {
        "securityRules": [
          {
            "name": "SSH-rule",
            "properties": {
              "description": "allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 500,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP-rule",
            "properties": {
              "description": "allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 510,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vNet').name]",
      "apiVersion": "2018-06-01",
      "location": "[variables('vNet').location]",
      "comments": "Create the Azure vNet",
      "dependsOn": [
        "[resourceId('Microsoft.Network/routeTables', variables('RT-subnet2').name )]",
        "[resourceId('Microsoft.Network/routeTables', variables('RT-subnet3').name )]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsg').name)]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNet').addressSpace1Prefix]",
            "[variables('vNet').addressSpace2Prefix]",
            "[variables('vNet').addressSpace3Prefix]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vNet').subnet1Name]",
            "properties": {
              "addressPrefix": "[variables('vNet').subnet1Prefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg').name)]"
              }
            }
          },
          {
            "name": "[variables('vNet').subnet2Name]",
            "properties": {
              "addressPrefix": "[variables('vNet').subnet2Prefix]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('RT-subnet2').name)]"
              },
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg').name)]"
              }
            }
          },
          {
            "name": "[variables('vNet').subnet3Name]",
            "properties": {
              "addressPrefix": "[variables('vNet').subnet3Prefix]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('RT-subnet3').name)]"
              },
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg').name)]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('RT-subnet2').name]",
      "apiVersion": "2018-06-01",
      "comments": "Routing table subnet2",
      "location": "[variables('RT-subnet2').location]",
      "dependsOn": [],
      "properties": {
        "routes": [
          {
            "name": "[variables('RT-subnet2').nameRTEntry1]",
            "properties": {
              "addressPrefix": "[variables('RT-subnet2').destinationAddressPrefix1]",
              "nextHopType": "[variables('RT-subnet2').nextHopType1]",
              "nextHopIpAddress": "[variables('RT-subnet2').nextHopIpAddress1]"
            }
          }
        ]
      },
      "resources": []
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('RT-subnet3').name]",
      "apiVersion": "2018-06-01",
      "comments": "Routing table subnet3",
      "location": "[variables('RT-subnet3').location]",
      "dependsOn": [],
      "properties": {
        "routes": [
          {
            "name": "[variables('RT-subnet3').nameRTEntry1]",
            "properties": {
              "addressPrefix": "[variables('RT-subnet3').destinationAddressPrefix1]",
              "nextHopType": "[variables('RT-subnet3').nextHopType1]",
              "nextHopIpAddress": "[variables('RT-subnet3').nextHopIpAddress1]"
            }
          }
        ]
      },
      "resources": []
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('vmArray')[copyIndex()].vmName,'-pubIP')]",
      "apiVersion": "2018-06-01",
      "comments": "Public IP address VMs",
      "location": "[variables('vmArray')[copyIndex()].location]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      },
      "copy": {
        "name": "publicIpCopy",
        "count": "[variables('vmCount')]"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat( variables('vmArray')[copyIndex()].vmName,'-NIC' )]",
      "apiVersion": "2018-06-01",
      "location": "[variables('vmArray')[copyIndex()].location]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('vmArray')[copyIndex()].vmName,'-pubIP' )]",
        "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vmArray')[copyIndex()].VNetName))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('vmArray')[copyIndex()].privateIP]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat( variables('vmArray')[copyIndex()].vmName,'-pubIP' )  )]"
              },
              "subnet": {
                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks',variables('vmArray')[copyIndex()].VNetName),'/subnets/', variables('vmArray')[copyIndex()].SubnetName)]"
              }
            }
          }
        ],
        "enableIPForwarding": "[variables('vmArray')[copyIndex()].ipforwarding]"
      },
      "copy": {
        "name": "nicCopy",
        "count": "[variables('vmCount')]"
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmArray')[copyIndex()].vmName]",
      "apiVersion": "2018-06-01",
      "comments": "Create multiple VMs in a loop on VMArray",
      "location": "[variables('vmArray')[copyIndex()].location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmArray')[copyIndex()].vmName,'-NIC')  )]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmArray')[copyIndex()].vmSize]"
        },
        "osProfile": {
          "computerName": "[variables('vmArray')[copyIndex()].vmName]",
          "adminUsername": "[variables('adminUsername')]",
          "adminPassword": "[variables('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('vmArray')[copyIndex()].imagePublisher]",
            "offer": "[variables('vmArray')[copyIndex()].imageOffer]",
            "sku": "[variables('vmArray')[copyIndex()].OSVersion]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat( variables('vmArray')[copyIndex()].vmName,'-NIC' )  )]"
            }
          ]
        }
      },
      "copy": {
        "name": "nodeCopy",
        "count": "[variables('vmCount')]"
      }
    }
  ]
}
